5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1734_2497.log
== TEST (2019-05-14 18:09:32) 
-- CODE:


qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi     


t = 0

while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = ????

print(round(saldo, 2)) 

	

-- ERROR:
File "XXXX", line 14
    t = ????
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:12:32) 
-- CODE:

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi     


t = 0

while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = 100

print(round(saldo, 2)) 

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:13:08) 
-- CODE:

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi     


t = 0

while (saldo>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = 100

print(round(saldo, 2)) 

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:13:20) 
-- CODE:

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi     


t = 0

while (saldo>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = 100

print(round(saldo, 2)) 

	

-- EXECUTION TIME:
0.288365
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2497/main.py", line 2, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:03:34) 
-- CODE:
qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi     


t = 0

while (saldo>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = 100

print(round(saldo, 2)) 

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:03:52) 
-- CODE:
qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi     


t = 0

while (saldo>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = 100

print(round(saldo, 2)) 

	

-- EXECUTION TIME:
0.311539
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2497/main.py", line 1, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:04:03) 
-- CODE:
qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi     


t = 0

while (saldo>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = 100
print(round(saldo, 2)) 

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:04:11) 
-- CODE:
qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi     


t = 0

while (saldo>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = 100
print(round(saldo, 2)) 

	

-- EXECUTION TIME:
0.327335
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2497/main.py", line 1, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:02:25) 
-- CODE:
qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi     


t = 0

while (saldo>1):
	rend = (saldo * juros)/100
	saldo = saldo + rend
	t = tempo+1
print(round(saldo, 2)) 

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:10:34) 
-- CODE:
qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi     


t = 0

while (tempo<12):
	rend = saldo * juros
	saldo = saldo + (rend/100)
	t = t+1
print(round(saldo, 2)) 

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:10:43) 
-- CODE:
qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi     


t = 0

while (tempo<12):
	rend = saldo * juros
	saldo = saldo + (rend/100)
	t = t+1
print(round(saldo, 2)) 

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:10:55) 
-- CODE:
qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi     


t = 0

while (tempo<12):
	rend = saldo * juros
	saldo = saldo + (rend/100)
	t = t+1
print(round(saldo, 2)) 

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
